로그인 시스템 추가
세이브 기능 작업중

--- a/Saved/Config/Windows/Editor.ini
+++ b/Saved/Config/Windows/Editor.ini
@@ -119,7 +119,7 @@ WidgetBlueprintEditor_Designer_Layout_v4_1=(\
 							"SizeCoefficient": 0.85000002384185791,\
 							"Type": "Stack",\
 							"HideTabWell": false,\
-							"ForegroundTab": "CompilerResults",\
+							"ForegroundTab": "Sequencer",\
 							"Tabs": [\
 								(\
 									"TabId": "Sequencer",\
@@ -205,7 +205,7 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 									"SizeCoefficient": 0.80000001192092896,\
 									"Type": "Stack",\
 									"HideTabWell": false,\
-									"ForegroundTab": "Document : 0",\
+									"ForegroundTab": "Document : 35",\
 									"Tabs": [\
 										(\
 											"TabId": "Document",\
@@ -249,5 +249,8 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 		)\
 	]\
 )
+
+[/Script/UnrealEd.UnrealEdOptions]
+bExpandCustomClassPickerClassList=True
 
 
