--- a/Saved/Config/Windows/Editor.ini
+++ b/Saved/Config/Windows/Editor.ini
@@ -205,7 +205,7 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 									"SizeCoefficient": 0.80000001192092896,\
 									"Type": "Stack",\
 									"HideTabWell": false,\
-									"ForegroundTab": "Document : 0",\
+									"ForegroundTab": "Document : 10",\
 									"Tabs": [\
 										(\
 											"TabId": "Document",\
@@ -225,7 +225,7 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 										),\
 										(\
 											"TabId": "FindResults",\
-											"TabState": "ClosedTab"\
+											"TabState": "OpenedTab"\
 										)\
 									]\
 								)\
