학습장 중간저장
학습완료된게 생성이안됨
틀린횟수 공유가 안됨

--- a/Saved/Config/Windows/Editor.ini
+++ b/Saved/Config/Windows/Editor.ini
@@ -178,6 +178,10 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 									"Tabs": [\
 										(\
 											"TabId": "MyBlueprint",\
+											"TabState": "ClosedTab"\
+										),\
+										(\
+											"TabId": "MyBlueprint",\
 											"TabState": "OpenedTab"\
 										)\
 									]\
@@ -205,7 +209,7 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 									"SizeCoefficient": 0.79358839988708496,\
 									"Type": "Stack",\
 									"HideTabWell": false,\
-									"ForegroundTab": "Document : 0",\
+									"ForegroundTab": "Document : 5",\
 									"Tabs": [\
 										(\
 											"TabId": "Document",\
@@ -222,6 +226,22 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 										(\
 											"TabId": "CompilerResults",\
 											"TabState": "OpenedTab"\
+										),\
+										(\
+											"TabId": "FindResults",\
+											"TabState": "ClosedTab"\
+										),\
+										(\
+											"TabId": "FindResults",\
+											"TabState": "ClosedTab"\
+										),\
+										(\
+											"TabId": "FindResults",\
+											"TabState": "ClosedTab"\
+										),\
+										(\
+											"TabId": "FindResults",\
+											"TabState": "ClosedTab"\
 										),\
 										(\
 											"TabId": "FindResults",\
