--- a/Saved/Config/Windows/Editor.ini
+++ b/Saved/Config/Windows/Editor.ini
@@ -42,7 +42,7 @@ WidgetBlueprintEditor_Designer_Layout_v4_1=(\
 					"Orientation": "Orient_Horizontal",\
 					"Nodes": [\
 						(\
-							"SizeCoefficient": 0.22600539028644562,\
+							"SizeCoefficient": 0.15000000596046448,\
 							"Type": "Splitter",\
 							"Orientation": "Orient_Vertical",\
 							"Nodes": [\
@@ -73,7 +73,7 @@ WidgetBlueprintEditor_Designer_Layout_v4_1=(\
 							]\
 						),\
 						(\
-							"SizeCoefficient": 0.50748276710510254,\
+							"SizeCoefficient": 0.62962961196899414,\
 							"Type": "Stack",\
 							"HideTabWell": true,\
 							"ForegroundTab": "SlatePreview",\
@@ -85,7 +85,7 @@ WidgetBlueprintEditor_Designer_Layout_v4_1=(\
 							]\
 						),\
 						(\
-							"SizeCoefficient": 0.26651203632354736,\
+							"SizeCoefficient": 0.22037036716938019,\
 							"Type": "Stack",\
 							"HideTabWell": false,\
 							"ForegroundTab": "WidgetDetails",\
@@ -151,7 +151,7 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 				(\
 					"SizeCoefficient": 0.18672099709510803,\
 					"Type": "Stack",\
-					"HideTabWell": false,\
+					"HideTabWell": true,\
 					"ForegroundTab": "AssetEditorToolkit_Toolbar",\
 					"Tabs": [\
 						(\
@@ -166,7 +166,7 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 					"Orientation": "Orient_Horizontal",\
 					"Nodes": [\
 						(\
-							"SizeCoefficient": 0.21598504483699799,\
+							"SizeCoefficient": 0.15000000596046448,\
 							"Type": "Splitter",\
 							"Orientation": "Orient_Vertical",\
 							"Nodes": [\
@@ -197,15 +197,15 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 							]\
 						),\
 						(\
-							"SizeCoefficient": 0.63401412963867188,\
+							"SizeCoefficient": 0.69999998807907104,\
 							"Type": "Splitter",\
 							"Orientation": "Orient_Vertical",\
 							"Nodes": [\
 								(\
-									"SizeCoefficient": 0.80000001192092896,\
+									"SizeCoefficient": 0.79358839988708496,\
 									"Type": "Stack",\
 									"HideTabWell": false,\
-									"ForegroundTab": "Document : 15",\
+									"ForegroundTab": "Document : 3",\
 									"Tabs": [\
 										(\
 											"TabId": "Document",\
@@ -214,7 +214,7 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 									]\
 								),\
 								(\
-									"SizeCoefficient": 0.20000000298023224,\
+									"SizeCoefficient": 0.20641160011291504,\
 									"Type": "Stack",\
 									"HideTabWell": false,\
 									"ForegroundTab": "FindResults",\
