--- a/Saved/Config/Windows/Editor.ini
+++ b/Saved/Config/Windows/Editor.ini
@@ -27,7 +27,7 @@ WidgetBlueprintEditor_Designer_Layout_v4_1=(\
 				(\
 					"SizeCoefficient": 0.20000000298023224,\
 					"Type": "Stack",\
-					"HideTabWell": true,\
+					"HideTabWell": false,\
 					"ForegroundTab": "AssetEditorToolkit_Toolbar",\
 					"Tabs": [\
 						(\
@@ -119,7 +119,7 @@ WidgetBlueprintEditor_Designer_Layout_v4_1=(\
 							"SizeCoefficient": 0.85000002384185791,\
 							"Type": "Stack",\
 							"HideTabWell": false,\
-							"ForegroundTab": "CompilerResults",\
+							"ForegroundTab": "Sequencer",\
 							"Tabs": [\
 								(\
 									"TabId": "Sequencer",\
@@ -202,7 +202,7 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 							"Orientation": "Orient_Vertical",\
 							"Nodes": [\
 								(\
-									"SizeCoefficient": 0.79358839988708496,\
+									"SizeCoefficient": 0.80000001192092896,\
 									"Type": "Stack",\
 									"HideTabWell": false,\
 									"ForegroundTab": "Document : 0",\
@@ -214,10 +214,10 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 									]\
 								),\
 								(\
-									"SizeCoefficient": 0.20641160011291504,\
+									"SizeCoefficient": 0.20000000298023224,\
 									"Type": "Stack",\
 									"HideTabWell": false,\
-									"ForegroundTab": "FindResults",\
+									"ForegroundTab": "CompilerResults",\
 									"Tabs": [\
 										(\
 											"TabId": "CompilerResults",\
@@ -225,7 +225,7 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 										),\
 										(\
 											"TabId": "FindResults",\
-											"TabState": "OpenedTab"\
+											"TabState": "ClosedTab"\
 										)\
 									]\
 								)\
