apk 패키징 옵션 변경
ㅇㅇ

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -6,3 +6,7 @@ ProjectName=Puzzle BP Game Template
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack,PackName="StarterContent")
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+bCompressed=True
+
