--- a/Saved/Config/Windows/Editor.ini
+++ b/Saved/Config/Windows/Editor.ini
@@ -27,7 +27,7 @@ WidgetBlueprintEditor_Designer_Layout_v4_1=(\
 				(\
 					"SizeCoefficient": 0.20000000298023224,\
 					"Type": "Stack",\
-					"HideTabWell": true,\
+					"HideTabWell": false,\
 					"ForegroundTab": "AssetEditorToolkit_Toolbar",\
 					"Tabs": [\
 						(\
@@ -42,7 +42,7 @@ WidgetBlueprintEditor_Designer_Layout_v4_1=(\
 					"Orientation": "Orient_Horizontal",\
 					"Nodes": [\
 						(\
-							"SizeCoefficient": 0.15000000596046448,\
+							"SizeCoefficient": 0.22600539028644562,\
 							"Type": "Splitter",\
 							"Orientation": "Orient_Vertical",\
 							"Nodes": [\
@@ -73,7 +73,7 @@ WidgetBlueprintEditor_Designer_Layout_v4_1=(\
 							]\
 						),\
 						(\
-							"SizeCoefficient": 0.62962961196899414,\
+							"SizeCoefficient": 0.44020247459411621,\
 							"Type": "Stack",\
 							"HideTabWell": true,\
 							"ForegroundTab": "SlatePreview",\
@@ -85,7 +85,7 @@ WidgetBlueprintEditor_Designer_Layout_v4_1=(\
 							]\
 						),\
 						(\
-							"SizeCoefficient": 0.22037036716938019,\
+							"SizeCoefficient": 0.33379188179969788,\
 							"Type": "Stack",\
 							"HideTabWell": false,\
 							"ForegroundTab": "WidgetDetails",\
@@ -119,7 +119,7 @@ WidgetBlueprintEditor_Designer_Layout_v4_1=(\
 							"SizeCoefficient": 0.85000002384185791,\
 							"Type": "Stack",\
 							"HideTabWell": false,\
-							"ForegroundTab": "Sequencer",\
+							"ForegroundTab": "CompilerResults",\
 							"Tabs": [\
 								(\
 									"TabId": "Sequencer",\
@@ -151,7 +151,7 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 				(\
 					"SizeCoefficient": 0.18672099709510803,\
 					"Type": "Stack",\
-					"HideTabWell": true,\
+					"HideTabWell": false,\
 					"ForegroundTab": "AssetEditorToolkit_Toolbar",\
 					"Tabs": [\
 						(\
@@ -166,7 +166,7 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 					"Orientation": "Orient_Horizontal",\
 					"Nodes": [\
 						(\
-							"SizeCoefficient": 0.15000000596046448,\
+							"SizeCoefficient": 0.21598504483699799,\
 							"Type": "Splitter",\
 							"Orientation": "Orient_Vertical",\
 							"Nodes": [\
@@ -197,7 +197,7 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 							]\
 						),\
 						(\
-							"SizeCoefficient": 0.69999998807907104,\
+							"SizeCoefficient": 0.63401412963867188,\
 							"Type": "Splitter",\
 							"Orientation": "Orient_Vertical",\
 							"Nodes": [\
@@ -205,7 +205,7 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 									"SizeCoefficient": 0.80000001192092896,\
 									"Type": "Stack",\
 									"HideTabWell": false,\
-									"ForegroundTab": "Document : 11",\
+									"ForegroundTab": "Document : 5",\
 									"Tabs": [\
 										(\
 											"TabId": "Document",\
@@ -225,7 +225,7 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 										),\
 										(\
 											"TabId": "FindResults",\
-											"TabState": "ClosedTab"\
+											"TabState": "OpenedTab"\
 										)\
 									]\
 								)\
